General cleanup and refactoring: Isolate http objects Replace with subclasses Override unwanted behaviour Improve dependency injection